<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile"/>

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/title_location" />

    <item
        android:id="@+id/navigation_information_centre"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/title_information_centre" />

    <item
        android:id="@+id/navigation_news_and_event"
        android:icon="@drawable/ic_event_note_black_24dp"
        android:title="@string/title_news_and_event" />
</menu>
